[tool.poetry]
name = "keynesian-beauty-contest"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.dependencies.naptha-sdk]
git = "https://github.com/NapthaAI/naptha-sdk.git"
branch = "feat/seperate_out_create_and_run_node_methods"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
