[tool.poetry]
name = "keynesian-beauty-contest"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
naptha-sdk = "~=0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"